2008-08-12  Sven Neumann  <sven@gimp.org>

	* app/paint/gimppaintcore.c (gimp_paint_core_start): use
	gimp_projection_get_tiles() instead of doing the same through the
	GimpPickable interface.

2008-08-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/win-snap/Makefile.am: follow the executable name change.

2008-08-12  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.c (gimp_projection_paint_area): moved
	function calls out of CLAMP macros.

2008-08-12  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_empty):
	removed calls to scale the image and to update the scrollbars and
	rulers. Doesn't seem to make sense in an empty display and it
	causes a crash.

2008-08-12  Sven Neumann  <sven@gimp.org>

	* app/core/gimpitem.c
	* app/core/gimpobject.c
	* app/dialogs/preferences-dialog.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_selection.c
	* plug-ins/common/filter-pack.c
	* plug-ins/common/grid.c
	* plug-ins/common/newsprint.c
	* plug-ins/fractal-explorer/fractal-explorer-dialogs.c
	* plug-ins/fractal-explorer/fractal-explorer.c: use canonical
	signal names.

2008-08-12  Sven Neumann  <sven@gimp.org>

	* configure.in (sed-po-makefiles): create the stamp-it files in
	the po-* directories.

2008-08-12  Sven Neumann  <sven@gimp.org>

	* po-*/Makefile.in.in: corrected 'subdir' variables. Spotted by
	Tor Lillqvist.

	* modules/controller-midi.c: formatting.

2008-08-12  Michael Natterer  <mitch@gimp.org>

	* modules/color-selector-wheel.c: override the wheel's
	size-request and return a small requisition that allows
	it to be resized smaller again.

2008-08-12  Sven Neumann  <sven@gimp.org>

	* modules/Makefile.am: fixed library dependencies.

2008-08-11  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/cml-explorer.c
	* plug-ins/common/depth-merge.c
	* plug-ins/common/file-cel.c
	* plug-ins/common/oilify.c
	* plug-ins/file-bmp/bmp-write.c
	* plug-ins/file-bmp/bmp.[ch]
	* plug-ins/file-ico/ico-dialog.c