@@ -1,5 +1,11 @@
 2008-08-12  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimphistogrameditor.c
+	(gimp_histogram_editor_frozen_update): don't do the background
+	histogram unless the histogram view is actually visible.
+
+2008-08-12  Sven Neumann  <sven@gimp.org>
+
 	* app/paint/gimppaintcore.c (gimp_paint_core_start): use
 	gimp_projection_get_tiles() instead of doing the same through the
 	GimpPickable interface.
